fixed wrapping on images

--- a/style.css
+++ b/style.css
@@ -500,7 +500,7 @@ margin-bottom: 1em;
 
 }
 
-.align-left{
+.alignleft{
   float: left;
     margin-top: 2em;
     margin-right: 3em;
